# puppycloud

./: agents.md  biome.json  package.json  readme.md  watch.sh
android/: settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/androidTest/java/puppycorp/puppycloud/: ExampleInstrumentedTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/puppycorp/puppycloud/: MainActivity.kt
android/app/src/main/java/puppycorp/puppycloud/ui/: ConnectScreen.kt  (+3 more)
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/test/java/puppycorp/puppycloud/: ExampleUnitTest.kt
android/gradle/wrapper/: gradle-wrapper.properties
apple/PuppyCloud/: ConnectView.swift  ContentView.swift  GalleryView.swift  PeersView.swift  PuppyCloud.entitlements  PuppyCloudApp.swift  QRScannerView.swift
apple/PuppyCloud.xcodeproj/: project.pbxproj
apple/PuppyCloud.xcodeproj/project.xcworkspace/xcuserdata/puppy.xcuserdatad/: UserInterfaceState.xcuserstate
apple/PuppyCloud.xcodeproj/xcuserdata/puppy.xcuserdatad/xcschemes/: xcschememanagement.plist
apple/PuppyCloudTests/: PuppyCloudTests.swift
apple/PuppyCloudUITests/: PuppyCloudUITests.swift  PuppyCloudUITestsLaunchTests.swift
assets/: index.html  puppycloud.css  puppycloud.js
rust/: Cargo.toml
rust/src/: db.rs  main.rs
rust/static/: gallery.html  index.html  peers.html
src/: db.ts  mcp.ts  server.ts  server.ts.ts
src/backends/: base.ts  docker.test.ts  docker.ts  errors.ts  index.ts
src/web/: container.html  create.html  index.html
web/: app.ts  files.ts  peers.ts
(+3 files in other folders)
