[package]
name = "puppycloud"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "io-util"] }
axum = { version = "0.7", features = ["macros", "json", "multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rusqlite = { version = "0.30", features = ["bundled"] }
blake3 = "1"
bytes = "1"
time = { version = "0.3", features = ["serde"] }

# Config
clap = { version = "4", features = ["derive"] }
toml = "0.8"

# P2P
libp2p = { version = "0.54", features = ["full"] }
futures = "0.3"
